@@ -145,11 +145,11 @@
                                 <div>
                                     <ul>
                                         {% if view.copyrights %}<li><a class="js-toggle-copyrights">Bildrechte</a></li>{% endif -%}
-                                        <li><a href="http://{{ request.host }}/hilfe/datenschutz">Datenschutz</a></li>
+                                        <li><a href="{{ request.route_url('home') }}hilfe/datenschutz">Datenschutz</a></li>
                                         <li><a href="http://www.iqm.de/Medien/Online/nutzungsbasierte_onlinewerbung.html">Cookies</a></li>
-                                        <li><a href="http://{{ request.host }}/administratives/agb-kommentare-artikel">AGB</a></li>
-                                        <li><a href="http://{{ request.host }}/impressum/index">Impressum</a></li>
-                                        <li><a href="http://{{ request.host }}/hilfe/hilfe">Hilfe/ Kontakt</a></li>
+                                        <li><a href="{{ request.route_url('home') }}administratives/agb-kommentare-artikel">AGB</a></li>
+                                        <li><a href="{{ request.route_url('home') }}impressum/index">Impressum</a></li>
+                                        <li><a href="{{ request.route_url('home') }}hilfe/hilfe">Hilfe/ Kontakt</a></li>
                                     </ul>
                                 </div>
                             </div>
