@@ -26,6 +26,8 @@ Change log for zeit.web
 
 - MAINT: Fix asset_host etc to allow mounting under an URL prefix (for showcases)
 
+- MAINT: Adjust templates to allow mounting under an URL prefix (for showcases)
+
 
 2.35 (2015-12-08)
 -----------------
